--- a/games.html
+++ b/games.html
@@ -52,22 +52,22 @@
         <h3>Fun and creative games for everyone</h3>
         <div class="gamesGrid">
             <div>
-                <img class="imgModes" src="./odyssse.png" alt="TV-Mode" width="200">
+                <img class="gamesImgMode" src="./odyssse.png" alt="TV-Mode" width="200">
             </div>
             <div>
-                <img class="imgModes" src="./Splatoon.png" alt="TV-Mode" width="200">
+                <img class="gamesImgMode" src="./Splatoon.png" alt="TV-Mode" width="200">
             </div>
             <div>
-                <img class="imgModes" src="./Arms.png" alt="TV-Mode" width="200">
+                <img class="gamesImgMode" src="./Arms.png" alt="TV-Mode" width="200">
             </div>
             <div>
-                <img class="imgModes" src="./Link.png" alt="TV-Mode" width="200">
+                <img class="gamesImgMode" src="./Link.png" alt="TV-Mode" width="200">
             </div>
             <div>
-                <img class="imgModes" src="./MCart.png" alt="TV-Mode" width="200">
+                <img class="gamesImgMode" src="./MCart.png" alt="TV-Mode" width="200">
             </div>
             <div>
-                <img class="imgModes" src="./pokemon.png" alt="TV-Mode" width="200">
+                <img class="gamesImgMode" src="./pokemon.png" alt="TV-Mode" width="200">
             </div>
         </div>
     </main>
