--- a/products.html
+++ b/products.html
@@ -52,19 +52,19 @@
         <h3>Play in three different ways</h3>
         <div class="productGrid">
             <div>
-                <img class="imgModes" src="./tv-mode.jpg" alt="TV-Mode" width="300">
+                <img class="productImgMode" src="./tv-mode.jpg" alt="TV-Mode" width="300">
             </div>
             <div>
                 <h3>Gather around a big screen and enjoy playing together.</h3>
             </div>
             <div>
-                <img class="imgModes" src="./tabletop-mode.jpg" alt="TableTop-Mode" width="300">
+                <img class="productImgMode" src="./tabletop-mode.jpg" alt="TableTop-Mode" width="300">
             </div>
             <div>
                 <h3>Share the screen, share the joy. Even if you dont have a TV.</h3>
             </div>
             <div>
-                <img class="imgModes" src="./handheld-mode.jpg" alt="HandHeld-Mode" width="300">
+                <img class="productImgMode" src="./handheld-mode.jpg" alt="HandHeld-Mode" width="300">
             </div>
             <div>
                 <h3>Take a big, crisp screen with you wherever you go.</h3>
